--- a/css/index.css
+++ b/css/index.css
@@ -20,109 +20,156 @@ body {
 }
 
 .menu{
-    color: white;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  font-family: Segoe UI;
+  margin-right: 50px;
+  cursor: pointer;
+}
+
+.titulo-login {
+color: black;
+font-size: 20px;
+font-family: 'Segoe UI';
+margin-left: 125px;
+}
+
+/* The popup form - hidden by default */
+.form-popup {
+  margin-top: 20px;
+  display: none;
+  position: fixed;
+  right: 15px;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  font-family: Segoe UI;
+  color: white;
+  max-width: 300px;
+  padding: 10px;
+  background-color:white;
+  border-radius: 7px;
+}
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: rgb(255, 0, 0);
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+.btn{
+  font-size: 14px;
+  border-radius: 10px;
+}
+
+  /* Set a style for the submit/login button */
+  .btn_fechar {
+      color: black;
+      margin-left: 130px;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+      margin-bottom:10px;
+      opacity: 0.8;
+    }
+
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
+
+.esqueci{
+color: rgb(248, 60, 60);
+font-family: 'Segoe UI';
+}
+
+.esqueci:hover{
+  text-decoration: underline;
+  cursor: pointer;
+  font-style: inherit;
+}
+
+#login{
+height: 40px;
+width: 300px;
+background: transparent;
+border: none;
+border-bottom: 2px solid grey;
+font-family: 'Segoe UI';
+font-size: 15px;
+margin-bottom: 7px;
+}
+
+.dropdown {
+  color: white;
     text-decoration: none;
     font-size: 20px;
     font-family: Segoe UI;
     margin-right: 50px;
     cursor: pointer;
+  float: left;
+  overflow: hidden;
 }
 
-.titulo-login {
-  color: black;
+.dropdown .dropbtn {
   font-size: 20px;
-  font-family: 'Segoe UI';
-  margin-left: 125px;
-}
-  
-  /* The popup form - hidden by default */
-  .form-popup {
-    margin-top: 20px;
-    display: none;
-    position: fixed;
-    right: 15px;
-    z-index: 9;
-  }
-  
-  /* Add styles to the form container */
-  .form-container {
-    font-family: Segoe UI;
-    color: white;
-    max-width: 300px;
-    padding: 10px;
-    background-color:white;
-    border-radius: 7px;
-  }
-  
-  /* Full-width input fields */
-  .form-container input[type=text], .form-container input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    border: none;
-    background: #f1f1f1;
-  }
-  
-  /* When the inputs get focus, do something */
-  .form-container input[type=text]:focus, .form-container input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-  }
-  
-  /* Set a style for the submit/login button */
-  .form-container .btn {
-    background-color: rgb(255, 0, 0);
-    color: white;
-    padding: 16px 20px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    margin-bottom:10px;
-    opacity: 0.8;
-  }
-
-  .btn{
-    font-size: 14px;
-    border-radius: 10px;
-  }
-
-    /* Set a style for the submit/login button */
-    .btn_fechar {
-        color: black;
-        margin-left: 130px;
-        border: none;
-        cursor: pointer;
-        width: 100%;
-        margin-bottom:10px;
-        opacity: 0.8;
-      }
-
-  
-  /* Add some hover effects to buttons */
-  .form-container .btn:hover, .open-button:hover {
-    opacity: 1;
-  }
-
-  .esqueci{
-	color: rgb(248, 60, 60);
-	font-family: 'Segoe UI';
-}
-
-.esqueci:hover{
-    text-decoration: underline;
-    cursor: pointer;
-    font-style: inherit;
-}
-
-#login{
-  height: 40px;
-	width: 300px;
-  background: transparent;
   border: none;
-  border-bottom: 2px solid grey;
-	font-family: 'Segoe UI';
-	font-size: 15px;
-	margin-bottom: 7px;
+  outline: none;
+  color: white;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  font-size: 15px;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: rgba(204, 203, 203, 0.973);
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 footer{
