--- a/css/cadastroUsuario.css
+++ b/css/cadastroUsuario.css
@@ -1,83 +1,49 @@
 body {
-    background-image:url(./imgs/background-cadastro.jpg);
-    background-repeat: no repeat;
-    background-size: 100%;
-    background-position: center;
-    background-attachment: fixed;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
+    background-color:#111111;
   }
-  
-
-
-.cadastro {
-    background-color: white;
-    border-radius: 8px;
-    height: 470px;
-    width: 400px;
-    margin-left: 600px;
-    margin-top: 40px;
+.header{
+    margin: 0;
+    height: 100vh;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
-  
-.titulo-cad {
-    font-size: 20px;
-    text-align: center;
-    font-family: "Segoe UI";
+.titulo{
+    margin-left: 105px;
 }
-  
-.input {
-    height: 40px;
-    width: 344px;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    font-family: "Segoe UI";
-    font-size: 16px;
-    margin-bottom: 7px;
+.centro{
+    background-color: white;
+    height: 400px;
+    width: 350px;
+    margin-top: -650px;
+    margin-left: 550px;
 }
-  
-.centro {
-    font-family: "Segoe UI";
-    font-size: 15px;
-    margin-left: 22px;
+.content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-  
-.titulo-datanasc {
-    font-family: "Segoe UI";
-    margin-left: 22px;
-}
-  
-.datanasc {
-    font-size: 18px;
-    margin-top: 10px;
-    height: 40px;
-    width: 344px;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    margin-bottom: 15px;
-}
-  
-.btn-cad {
-    font-family: "Segoe UI";
-    font-size: 15px;
+#btn{
     color: white;
-    background-color: rgb(248, 60, 60);
-    border-radius: 15px;
-    width: 200px;
-    border: none;
-    height: 35px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    background-color: goldenrod;
+    border-color: goldenrod;
+    margin-left: 165px;
+    height: 25px;
 }
-  
-.btn-cad:hover {
-    cursor: pointer;
-    background-color: rgb(255, 80, 80);
+#register{
+    margin-top: 150px;
+    text-decoration: none;
+    margin-left: 60px;
 }
-  
+#btn:hover{
+    background-color: rgb(250, 200, 74);
+}
+#register:link{
+    color: black;
+}
+#register:visited{
+    color: black;
+}
+#register:hover{
+    color: rgb(58, 58, 255);
+}
