--- a/css/menuUsuario.css
+++ b/css/menuUsuario.css
@@ -1,12 +1,24 @@
+body{
+	background-color: #111111;
+}
 
+.table{
+	display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .descricao {
     background-color: rgba(255, 255, 255, 0.7);
     border-radius: 8px;
     height: 410px;
     width: 420px;
-    margin-left: 900px;
-    margin-top: 40px;
+	margin-top: 40px;
+	margin-left: 50px;
+}
+
+#img{
+	margin-top: 40px;
 }
   
 .titulo {
