--- a/css/produtos.css
+++ b/css/produtos.css
@@ -179,6 +179,11 @@ body {
   font-size: 18px;
 }
 
-.botao :hover{
+.botao:hover{
   opacity: 0.7;
+}
+
+.tabela{
+  text-decoration: none;
+  color: white;
 }
