--- a/css/menuUsuario.css
+++ b/css/menuUsuario.css
@@ -9,7 +9,7 @@ body{
 }
 
 .descricao {
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: white;
     border-radius: 8px;
     height: 410px;
     width: 420px;
